force-app/main/default/objects/B2B_Settings__mdt/B2B_Settings__mdt.object-meta.xml
<CustomObject>
    <label>B2B Settings</label>
    <pluralLabel>B2B Settings</pluralLabel>
</CustomObject>