force-app/main/default/objects/B2B_Settings__mdt/fields/Approval_Notification_Author__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notification_Author__c</fullName>
    <description>BC-410 username of sf user that should be listed as the author of approval notifications</description>
    <inlineHelpText>BC-410 username of sf user that should be listed as the author of approval notifications</inlineHelpText>
    <label>Approval Notification Author</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>