force-app/main/default/objects/B2B_Settings__mdt/fields/Inventory_On_Hold_Max_Hours__c.field-meta.xml
<CustomField>
    <fullName>Inventory_On_Hold_Max_Hours__c</fullName>
    <description>BC-351 indicates whats the max amount of hours an inventory can be put on hold for (e.g. as part of WAV configuration)</description>
    <inlineHelpText>BC-351 indicates whats the max amount of hours an inventory can be put on hold for (e.g. as part of WAV configuration)</inlineHelpText>
    <label>Inventory On Hold Max Hours</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>