force-app/main/default/objects/B2B_Settings__mdt/fields/Network_Name__c.field-meta.xml
<CustomField>
    <fullName>Network_Name__c</fullName>
    <label>Network Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>