force-app/main/default/objects/B2B_Settings__mdt/fields/Notification_Emails__c.field-meta.xml
<CustomField>
    <fullName>Notification_Emails__c</fullName>
    <description>new line separated list of email address that will be used for notification about various issues with batch processing/user migration etc.</description>
    <inlineHelpText>new line separated list of email address that will be used for notification about various issues with batch processing/user migration etc.</inlineHelpText>
    <label>Notification Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>