force-app/main/default/objects/B2B_Settings__mdt/fields/Order_Approval_Chatter_Group__c.field-meta.xml
<CustomField>
    <fullName>Order_Approval_Chatter_Group__c</fullName>
    <description>BC-410 name of chatter group that will be notified when an order has been placed and is awaiting approval</description>
    <inlineHelpText>BC-410 name of chatter group that will be notified when an order has been placed and is awaiting approval</inlineHelpText>
    <label>Order Approval Chatter Group</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>