force-app/main/default/objects/B2B_Settings__mdt/fields/Storefront__c.field-meta.xml
<CustomField>
    <fullName>Storefront__c</fullName>
    <label>Storefront</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>